Added new fixture routes, Recent fixtures functionality, and refactored Api requests to a services file

--- a/client/src/components/css/main.css
+++ b/client/src/components/css/main.css
@@ -16,3 +16,9 @@ main {
 ::-webkit-scrollbar {
   width: 0;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 497px;
+  grid-gap: 1rem;
+}
