--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -1,6 +1,8 @@
 nav {
   height: 100vh;
   width: 100vw;
+  position: fixed;
+  top: 0;
 
   display: flex;
   justify-content: flex-end;
@@ -33,21 +35,17 @@ nav div {
 }
 
 nav div:first-child {
-  background: #003327;
-  /* background-image: url("../images/field.jpg");
-  background-size: cover; */
+  background: #160033;
 }
 nav div:nth-child(2) {
-  background: #1b503e;
-  /* background-image: url("../images/pitch.jpg");
-  background-size: cover; */
+  background: #2d1b50;
 }
 nav div:nth-child(3) {
-  background: #77ac9d;
+  background: #8b77ac;
 }
 nav div:last-child {
-  background: #bfdfd0;
-  color: #2d2a16;
+  background: #c5bfdf;
+  color: #1b162d;
 }
 
 nav .selected {
