--- a/client/src/components/css/stats.css
+++ b/client/src/components/css/stats.css
@@ -11,6 +11,13 @@
   display: flex;
   align-content: flex-start;
   flex-wrap: wrap;
+
+  height: 300px;
+}
+
+.team-info > div {
+  overflow-y: scroll;
+  height: 100%;
 }
 
 .recent-results {
@@ -22,6 +29,10 @@
 
 h4 {
   font-weight: 500;
+  position: sticky;
+  top: 0;
+
+  background: inherit;
 }
 
 hr {
