--- a/client/src/components/css/main.css
+++ b/client/src/components/css/main.css
@@ -3,6 +3,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
+  font-family: sans-serif;
 }
 
 main {
@@ -19,6 +20,6 @@ main {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 500px;
+  grid-template-columns: 1fr calc(100% - 770px);
   grid-gap: 1rem;
 }
