--- a/client/src/components/css/main.css
+++ b/client/src/components/css/main.css
@@ -7,7 +7,8 @@
 }
 
 main {
-  top: calc(10vh + 2rem);
+  /* top: calc(10vh + 2rem); */
+  top: 2rem;
   left: 2rem;
   width: calc(100vw - 250px);
 
