--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -1,4 +1,4 @@
-nav {
+.desktop__navbar {
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -8,24 +8,24 @@ nav {
   justify-content: flex-end;
 }
 
-nav a {
+.desktop__navbar a {
   text-decoration: none;
   user-select: none;
 
   color: inherit;
 }
 
-nav div:not(.selected) {
+.desktop__navbar div:not(.selected) {
   transform: rotate(180deg);
   display: flex;
 }
 
-nav div:not(.selected) a {
+.desktop__navbar div:not(.selected) a {
   padding: 2rem 1rem;
   writing-mode: vertical-lr;
 }
 
-nav div {
+.desktop__navbar div {
   cursor: pointer;
   order: 1;
 
@@ -34,21 +34,21 @@ nav div {
   color: #f3f2e7;
 }
 
-nav div:first-child {
+.desktop__navbar div:first-child {
   background: #160033;
 }
-nav div:nth-child(2) {
+.desktop__navbar div:nth-child(2) {
   background: #2d1b50;
 }
-nav div:nth-child(3) {
+.desktop__navbar div:nth-child(3) {
   background: #8b77ac;
 }
-nav div:last-child {
+.desktop__navbar div:last-child {
   background: #c5bfdf;
   color: #1b162d;
 }
 
-nav .selected {
+.desktop__navbar div.selected {
   position: relative;
 
   flex-grow: 1;
@@ -57,6 +57,7 @@ nav .selected {
   /* font-size: 4rem;
   font-weight: bold; */
   color: transparent;
+  /* background: white; */
   cursor: default;
 
   padding: 1rem 0 0 2rem;
