--- a/client/src/components/css/stats.css
+++ b/client/src/components/css/stats.css
@@ -1,4 +1,4 @@
-.stats {
+.desktop-stats {
   display: flex;
   flex-direction: column;
 
@@ -113,7 +113,7 @@ hr {
 }
 
 @media screen and (max-width: 500px) {
-  .stats {
+  .desktop-stats {
     display: none;
   }
 }
