--- a/client/src/components/css/main.css
+++ b/client/src/components/css/main.css
@@ -12,8 +12,8 @@
 @media screen and (min-width: 500px) {
   main {
     /* top: calc(10vh + 2rem); */
-    top: 2rem;
-    left: 2rem;
+    top: var(--spacing-regular);
+    left: var(--spacing-regular);
     width: calc(100vw - 250px);
 
     position: absolute;
@@ -28,6 +28,12 @@
 
 .mobile__navbar {
   display: none;
+}
+
+.logo {
+  width: 75px;
+  margin: var(--spacing-medium) var(--spacing-regular);
+  margin-left: 0;
 }
 
 @media screen and (max-width: 500px) {
@@ -49,12 +55,6 @@
     padding: var(--spacing-small) var(--spacing-regular);
     padding-bottom: var(--spacing-3xlarge);
     min-height: 100vh;
-  }
-
-  .logo {
-    width: 75px;
-    margin: var(--spacing-medium) var(--spacing-regular);
-    margin-left: 0;
   }
 
   .mobile__navbar svg {
