fixed unsupported properties

--- a/client/src/components/css/fixtures.css
+++ b/client/src/components/css/fixtures.css
@@ -43,6 +43,11 @@ h3 {
 
 summary {
   display: block;
+  list-style: none;
+}
+
+summary::-webkit-details-marker {
+  display: none;
 }
 
 details {
