added loader, minor style changes

--- a/client/src/components/css/design_system.css
+++ b/client/src/components/css/design_system.css
@@ -18,6 +18,7 @@
   --blk: #000;
   --wht: #fff;
   --brandG: #19e5a8;
+  --darkerBrandG: hsl(162, 80%, 35%);
   --paleG: #cffcef;
   --brightV: #9381ff;
   --paleV: #bbb1f2;
