--- a/client/src/components/css/mobile-stats.css
+++ b/client/src/components/css/mobile-stats.css
@@ -14,7 +14,7 @@ div.header {
 
 .header__icon {
   position: absolute;
-  right: 30px;
+  right: calc(30px);
   top: 5px;
   width: 120px;
   height: auto;
@@ -65,6 +65,9 @@ div.header {
 
 .standings div span:nth-child(3) {
   margin-left: auto;
+}
+
+.top_scorer .standings div span:nth-child(3) {
   font-size: var(--text-small);
 }
 
