fixed bug with 'next' button on fixtures page

--- a/client/src/components/css/design_system.css
+++ b/client/src/components/css/design_system.css
@@ -17,8 +17,8 @@
   /* Colors */
   --blk: #000;
   --wht: #fff;
-  --brandG: #19e5a8;
-  --darkerBrandG: hsl(162, 80%, 35%);
+  --brandG: #19e6a8;
+  --darkerBrandG: #12a176;
   --paleG: #cffcef;
   --brightV: #9381ff;
   --paleV: #bbb1f2;
