more style changes

--- a/client/src/components/css/design_system.css
+++ b/client/src/components/css/design_system.css
@@ -21,7 +21,8 @@
   --paleG: #cffcef;
   --brightV: #9381ff;
   --paleV: #bbb1f2;
-  --palerV: #a39ad5;
+  --palerV: #e1d9fb;
+  --darkV: #100459;
   --accentR: #e63060;
 
   /* Typography */
